--- a/game.html
+++ b/game.html
@@ -7,6 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="game.css">
 		<link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 		<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+		<!-- node modules don't working in github page because it is out of limit. I will use cdn for it working -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 		
 	</head>
 	<body>
